Spring security configuration -created a config class and modified the filter.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,7 @@ spring.application.name=SpringSecEx
 spring.security.user.name= kal
 spring.security.user.password= kal
 server.port=8080
+
+spring.datasource.url=jdbc:postgresql://localhost:5433/userSec
+spring.datasource.username=postgres
+spring.datasource.password=0000
